# AIAClientSDK

./: CMakeLists.txt  KnownIssues.md  NOTICE  PortingGuide.md  QuickStartGuide.md  README.md  pkg-config.pc.in
AiaCore/: CMakeLists.txt
AiaCore/include/aiaalertmanager/: aia_alert_constants.h  aia_alert_manager.h  aia_alert_slot.h
AiaCore/include/aiaalertmanager/private/: aia_alert_manager.h
AiaCore/include/aiaclockmanager/: aia_clock_manager.h
AiaCore/include/aiaclockmanager/private/: aia_clock_manager.h
AiaCore/include/aiaconnectionmanager/: aia_connection_constants.h  aia_connection_manager.h
AiaCore/include/aiacore/: aia_backoff.h  aia_binary_constants.h  aia_binary_message.h  aia_button_command.h  aia_button_command_sender.h  aia_capabilities_constants.h  aia_crypto_mbedtls.h  aia_directive.h  aia_encryption_algorithm.h  aia_events.h  aia_exception_encountered_utils.h  aia_init.h  aia_json_constants.h  aia_json_message.h  aia_json_utils.h  aia_mbedtls_threading.h  aia_message.h  aia_message_constants.h  aia_random_mbedtls.h  aia_secret_derivation_algorithm.h  aia_topic.h  aia_utils.h  aia_volume_constants.h
AiaCore/include/aiacore/capabilities_sender/: aia_capabilities_sender.h  aia_capabilities_sender_state.h
AiaCore/include/aiacore/data_stream_buffer/: aia_data_stream_buffer.h  aia_data_stream_buffer_reader.h  (+1 more)
AiaCore/include/aiadispatcher/: aia_dispatcher.h
AiaCore/include/aiaemitter/: aia_emitter.h
AiaCore/include/aiaexceptionmanager/: aia_exception_code.h  aia_exception_constants.h  aia_exception_manager.h
AiaCore/include/aiamicrophonemanager/: aia_microphone_constants.h  aia_microphone_manager.h  aia_microphone_state.h
AiaCore/include/aiaregistrationmanager/: aia_registration_constants.h  aia_registration_failure_code.h  aia_registration_manager.h
AiaCore/include/aiaregulator/: aia_regulator.h
AiaCore/include/aiasecretmanager/: aia_secret_manager.h
AiaCore/include/aiasequencer/: aia_sequencer.h
AiaCore/include/aiaspeakermanager/: aia_speaker_manager.h
AiaCore/include/aiauxmanager/: aia_ux_manager.h  aia_ux_state.h
AiaCore/source/aiaalertmanager/: CMakeLists.txt  aia_alert_manager.c
AiaCore/source/aiaclockmanager/: CMakeLists.txt  aia_clock_manager.c
AiaCore/source/aiaconnectionmanager/: CMakeLists.txt  aia_connection_manager.c
AiaCore/source/aiacore/: CMakeLists.txt  aia_backoff.c  aia_binary_message.c  aia_button_command_sender.c  aia_crypto_mbedtls.c  aia_encryption_algorithm.c  aia_exception_encountered_utils.c  aia_json_message.c  aia_json_utils.c  aia_mbedtls_threading.c  aia_message.c  aia_random_mbedtls.c  aia_secret_derivation_algorithm.c  aia_topic.c  aia_utils.c  core.c  init.c
AiaCore/source/aiadispatcher/: CMakeLists.txt  aia_dispatcher.c
AiaCore/source/aiaemitter/: CMakeLists.txt  aia_emitter.c
AiaCore/source/aiaexceptionmanager/: CMakeLists.txt  aia_exception_manager.c
AiaCore/source/aiamicrophonemanager/: CMakeLists.txt  aia_microphone_manager.c
AiaCore/source/aiaregistrationmanager/: CMakeLists.txt  aia_registration_manager.c
AiaCore/source/aiaregulator/: CMakeLists.txt  aia_regulator.c  aia_regulator_buffer.c
AiaCore/source/aiasecretmanager/: CMakeLists.txt  aia_secret_manager.c
AiaCore/source/aiasequencer/: CMakeLists.txt  aia_sequencer.c  aia_sequencer_buffer.c
AiaCore/source/aiaspeakermanager/: CMakeLists.txt  aia_speaker_manager.c
AiaCore/source/aiauxmanager/: CMakeLists.txt  aia_ux_manager.c
ApplicationUtilities/aiaclient/source/: CMakeLists.txt  aia_client.c
ApplicationUtilities/aiahttpclient/source/: CMakeLists.txt  aia_libcurl.c
ApplicationUtilities/aiaopusdecoder/source/: CMakeLists.txt  aia_opus_decoder.c
ApplicationUtilities/aiaportaudiomicrophone/source/: CMakeLists.txt  aia_portaudio_microphone.c
ApplicationUtilities/aiaportaudiospeaker/source/: CMakeLists.txt  aia_portaudio_speaker.c
demos/app/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  aia_tests.c
tests/aiaalertmanager/: CMakeLists.txt  aiaalertmanager_tests.c
tests/aiaalertmanager/unit/: aia_alert_manager_tests.c
tests/aiaclockmanager/: CMakeLists.txt  aiaclockmanager_tests.c
tests/aiaclockmanager/unit/: aia_clock_manager_tests.c
tests/aiaconnectionmanager/: CMakeLists.txt  aiaconnectionmanager_tests.c
tests/aiaconnectionmanager/unit/: aia_connection_manager_tests.c
tests/aiacore/: CMakeLists.txt  aiacore_tests.c
tests/aiacore/capabilities_sender/: aia_capabilities_sender_tests.c
tests/aiacore/stream_buffer/: stream_buffer_tests.c
tests/aiacore/unit/: aia_backoff_tests.c  aia_binary_message_tests.c  aia_button_command_sender_tests.c  aia_crypto_mbedtls_tests.c  aia_exception_encountered_utils_tests.c  aia_json_message_tests.c  aia_json_utils_tests.c  aia_message_tests.c  aia_random_mbedtls_tests.c  aia_utils_tests.c
tests/aiadispatcher/: CMakeLists.txt  aiadispatcher_tests.c
tests/aiadispatcher/unit/: aia_dispatcher_tests.c
tests/aiaemitter/: CMakeLists.txt  aiaemitter_tests.c
tests/aiaemitter/unit/: aia_emitter_tests.c
tests/aiaexceptionmanager/: CMakeLists.txt  aiaexceptionmanager_tests.c
tests/aiaexceptionmanager/unit/: aia_exception_manager_tests.c
tests/aiamicrophonemanager/: CMakeLists.txt  aiamicrophonemanager_tests.c
tests/aiamicrophonemanager/unit/: aia_microphone_manager_tests.c
tests/aiaregistrationmanager/: CMakeLists.txt  aiaregistrationmanager_tests.c
tests/aiaregistrationmanager/unit/: aia_registration_manager_tests.c
tests/aiaregulator/: CMakeLists.txt  aiaregulator_tests.c
tests/aiaregulator/unit/: aia_regulator_buffer_tests.c  aia_regulator_tests.c
tests/aiasecretmanager/: CMakeLists.txt  aiasecretmanager_tests.c
tests/aiasecretmanager/unit/: aia_secret_manager_tests.c
tests/aiasequencer/: CMakeLists.txt  aiasequencer_tests.c
tests/aiasequencer/unit/: aia_sequencer_tests.c
tests/aiaspeakermanager/: CMakeLists.txt  aiaspeakermanager_tests.c
tests/aiaspeakermanager/unit/: aia_speaker_manager_tests.c
tests/aiauxmanager/: CMakeLists.txt  aiauxmanager_tests.c
tests/aiauxmanager/unit/: aia_ux_manager_tests.c
tests/utils/: CMakeLists.txt
(+79 files in other folders)
