add_subdirectory("source/aiacore")
add_subdirectory("source/aiaalertmanager")
add_subdirectory("source/aiaemitter")
add_subdirectory("source/aiaexceptionmanager")
add_subdirectory("source/aiaregulator")
add_subdirectory("source/aiasecretmanager")
add_subdirectory("source/aiasequencer")
add_subdirectory("source/aiaspeakermanager")
add_subdirectory("source/aiamicrophonemanager")
add_subdirectory("source/aiaregistrationmanager")
add_subdirectory("source/aiauxmanager")
add_subdirectory("source/aiaclockmanager")
add_subdirectory("source/aiaconnectionmanager")
add_subdirectory("source/aiadispatcher")

install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
